<?xml version="1.0"?>
<package>
  <name>demo_stanley</name>
  <version>0.0.0</version>
        <description>
        This package implements stanley algorithm with simple demo in 
        STDR simulator and GAZEBO simulator. 
        For more information look at <a href="https://github.com/br5555/stanley"> </a>
    </description>
    <author>Branko Rados</author>
    <author>branko.rados@fer.hr</author>
    <maintainer email="branko.rados@fer.hr">Branko Rados</maintainer>
    <license>no</license>
    
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_py</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>tf2_tools</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_kdl</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2_py</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>tf2_tools</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
